--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,3 +11,8 @@
 @import "../blocks/modules/footer/footer";
 @import "../blocks/modules/start-section/start-section";
 @import "../blocks/modules/company-section/company-section";
+@import "../blocks/modules/services-section/services-section";
+@import "../blocks/modules/technology-section/technology-section";
+@import "../blocks/modules/why-section/why-section";
+@import "../blocks/modules/team-section/team-section";
+@import "../blocks/modules/reviews-section/reviews-section";
