--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,6 +6,11 @@
     <main class="page">
       @@include("../blocks/modules/start-section/start-section.html")
       @@include("../blocks/modules/company-section/company-section.html")
+      @@include("../blocks/modules/services-section/services-section.html")
+      @@include("../blocks/modules/technology-section/technology-section.html")
+      @@include("../blocks/modules/why-section/why-section.html")
+      @@include("../blocks/modules/team-section/team-section.html")
+      @@include("../blocks/modules/reviews-section/reviews-section.html")
     </main>
 
     @@include("../blocks/modules/footer/footer.html") @@include("../blocks/modules/scripts/scripts.html")
