--- a/src/blocks/modules/start-section/start-section.scss
+++ b/src/blocks/modules/start-section/start-section.scss
@@ -30,10 +30,6 @@
 
   &__title {
     margin-bottom: 1.6rem;
-
-    @media screen and (max-width: $sm) {
-      text-align: center;
-    }
   }
 
   &__title-subtext {
@@ -44,7 +40,6 @@
 
     @media screen and (max-width: $sm) {
       font-size: 1.6rem;
-      text-align: center;
     }
   }
 
@@ -97,12 +92,20 @@
 .start-section-logo {
   --center-width: 34%;
 
+  @media screen and (max-width: $sm) {
+    --center-width: 67%;
+  }
+
   display: flex;
   justify-content: center;
   padding: 16rem 0;
 
   @media screen and (max-width: $md) {
     padding: 8rem 0;
+  }
+
+  @media screen and (max-width: $sm) {
+    flex-direction: column;
   }
 
   &__text-box {
@@ -112,6 +115,10 @@
     width: calc((100% - var(--center-width)) / 2);
     position: relative;
     z-index: 15;
+
+    @media screen and (max-width: $sm) {
+      width: 100%;
+    }
 
     svg {
       width: 100%;
@@ -123,6 +130,14 @@
     position: relative;
     width: var(--center-width);
     flex-shrink: 0;
+
+    @media screen and (max-width: $sm) {
+      width: 100%;
+      height: 26rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
 
     img {
       position: absolute;
@@ -136,9 +151,21 @@
       z-index: 10;
       opacity: 0;
 
+      @media screen and (max-width: $sm) {
+        width: var(--center-width);
+      }
+
       &.is-active {
         transform: translate3d(-50%, -50%, 0) scale(1);
         opacity: 1;
+      }
+    }
+
+    svg {
+      @media screen and (max-width: $sm) {
+        width: calc((100% - var(--center-width)) / 2);
+        height: auto;
+        max-height: 16rem;
       }
     }
   }
