--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -54,9 +54,19 @@
       display: flex;
       flex-direction: column;
       text-align: center;
-      gap: 1.4rem;
+      gap: 1rem;
       transition: 0.3s;
       max-height: 0;
+    }
+
+    &-box {
+      padding-top: 2rem;
+      border-top: 1px solid #ececec;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      gap: 1rem;
     }
 
     &.is-active {
