--- a/src/blocks/modules/services-section/services-section.scss
+++ b/src/blocks/modules/services-section/services-section.scss
@@ -107,7 +107,7 @@
     display: flex;
     align-items: flex-start;
     gap: 2.3rem;
-    width: calc(100vw * 2);
+    width: max-content;
     margin-bottom: 4rem;
     height: var(--line-height);
 
@@ -122,7 +122,6 @@
     align-items: center;
     gap: 2.3rem;
     flex-shrink: 0;
-    width: 100vw;
     overflow: hidden;
 
     @media screen and (max-width: $lg) {
@@ -202,6 +201,6 @@
     transform: translateX(0);
   }
   to {
-    transform: translateX(calc(-50% - 2.3rem));
+    transform: translateX(calc(-50% - 1rem));
   }
 }
