--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -17,6 +17,10 @@ html {
   font-size: 0.625vw;
   height: stretch;
 
+  @media screen and (max-width: $xl) {
+    font-size: 0.825vw;
+  }
+
   @media screen and (max-width: $lg) {
     font-size: 62.5%;
   }
@@ -36,10 +40,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-/* main {
-  padding-bottom: 100vh;
-} */
 
 .page {
   padding-top: 9rem;
@@ -177,6 +177,12 @@ canvas {
     background: transparent;
     border-color: var(--c-black);
     color: var(--c-black);
+  }
+
+  &.is-ghost-white {
+    background: transparent;
+    border-color: #fff;
+    color: #fff;
   }
 
   /* 
@@ -533,4 +539,43 @@ html.lenis {
 
 .lenis.lenis-scrolling iframe {
   pointer-events: none;
+}
+
+.error-page {
+  height: 100svh;
+  background: var(--c-black);
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+  }
+
+  &__logo {
+    width: 90%;
+    display: flex;
+    justify-content: center;
+
+    @media screen and (max-width: $md) {
+      position: absolute;
+      top: 4rem;
+      left: 50%;
+      transform: translate(-50%, 0);
+    }
+
+    svg {
+      max-width: 100%;
+      height: auto;
+    }
+  }
+
+  &__status {
+    font-size: 12rem;
+
+    @media screen and (max-width: $md) {
+      font-size: 10rem;
+    }
+  }
 }
