--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,3 +16,4 @@
 @import "../blocks/modules/why-section/why-section";
 @import "../blocks/modules/team-section/team-section";
 @import "../blocks/modules/reviews-section/reviews-section";
+@import "../blocks/modules/popups/popups";
