--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -4,7 +4,21 @@
   left: 0;
   right: 0;
   z-index: 100;
-  /*   opacity: 0; */
+
+  @media screen and (min-width: $lg) {
+    &::before {
+      content: "";
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      top: 0;
+      background: rgba(255, 255, 255, 0.1);
+      display: block;
+      backdrop-filter: blur(3px);
+      will-change: transform;
+    }
+  }
 
   @media screen and (max-width: $lg) {
     padding-top: 1.6rem;
@@ -15,6 +29,7 @@
     justify-content: space-between;
     padding: 2.4rem 0 0 0;
     position: relative;
+    z-index: 5;
 
     &::after {
       content: "";
@@ -80,7 +95,7 @@
   }
 
   &__link {
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     cursor: pointer;
     transition: 0.3s;
 
@@ -108,6 +123,7 @@
       &::after,
       &::before {
         opacity: 1;
+        color: var(--c-prime);
       }
     }
 
