--- a/src/blocks/modules/services-section/services-section.scss
+++ b/src/blocks/modules/services-section/services-section.scss
@@ -103,13 +103,16 @@
   }
 
   &__line {
-    animation: scroll 15s linear infinite;
     display: flex;
     align-items: flex-start;
     gap: 2.3rem;
     width: max-content;
     margin-bottom: 4rem;
     height: var(--line-height);
+
+    &.is-animate {
+      animation: scroll 60s linear infinite;
+    }
 
     @media screen and (max-width: $lg) {
       height: auto;
@@ -193,6 +196,15 @@
   &__grid-item-text {
     opacity: 0.7;
     font-weight: 500;
+  }
+
+  &__content-right-button {
+    margin-top: 4rem;
+    width: 100%;
+   
+    @media screen and (min-width: $sm) {
+      max-width: 28rem;
+    }
   }
 }
 
