--- a/src/views/index.html
+++ b/src/views/index.html
@@ -13,6 +13,7 @@
       @@include("../blocks/modules/reviews-section/reviews-section.html")
     </main>
 
-    @@include("../blocks/modules/footer/footer.html") @@include("../blocks/modules/scripts/scripts.html")
+    @@include("../blocks/modules/footer/footer.html") @@include("../blocks/modules/popups/popups.html")
+    @@include("../blocks/modules/scripts/scripts.html")
   </body>
 </html>
