--- a/src/views/index.html
+++ b/src/views/index.html
@@ -10,7 +10,7 @@
       @@include("../blocks/modules/technology-section/technology-section.html")
       @@include("../blocks/modules/why-section/why-section.html")
       @@include("../blocks/modules/team-section/team-section.html")
-      @@include("../blocks/modules/reviews-section/reviews-section.html")
+      <!-- @@include("../blocks/modules/reviews-section/reviews-section.html") -->
     </main>
 
     @@include("../blocks/modules/footer/footer.html") @@include("../blocks/modules/popups/popups.html")
