--- a/src/blocks/modules/footer/footer.scss
+++ b/src/blocks/modules/footer/footer.scss
@@ -3,7 +3,7 @@
   border-radius: 30px 30px 0 0;
   padding: 9.5rem;
   color: var(--c-black);
-  margin-top: 23rem;
+  margin-top: var(--footer-margin);
 
   @media screen and (max-width: $lg) {
     padding: 5rem 3rem;
@@ -11,7 +11,7 @@
 
   @media screen and (max-width: $md) {
     padding: 3rem 0;
-    margin-top: 14rem;
+    margin-top: var(--footer-margin);
   }
 
   &__container {
