--- a/src/blocks/modules/reviews-section/reviews-section.scss
+++ b/src/blocks/modules/reviews-section/reviews-section.scss
@@ -59,7 +59,7 @@
 .review-card {
   background: #fff;
   border-radius: 3rem;
-  min-height: 50rem;
+  min-height: 40rem;
   padding: 3.6rem;
   color: var(--c-black);
   display: flex;
@@ -78,6 +78,11 @@
     width: 10rem;
     height: 10rem;
     flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    border: 1px solid rgba(98, 98, 98, 0.5);
 
     @media screen and (max-width: $lg) {
       width: 6rem;
@@ -88,7 +93,7 @@
   &__data-container {
     display: flex;
     flex-direction: column;
-    gap: 1.6rem;
+    gap: 1rem;
 
     @media screen and (max-width: $lg) {
       gap: 0.6rem;
@@ -98,6 +103,7 @@
   &__name {
     font-size: 3.6rem;
     line-height: 100%;
+    letter-spacing: -0.02em;
 
     @media screen and (max-width: $lg) {
       font-size: 2.4rem;
@@ -107,10 +113,15 @@
   &__position {
     font-weight: 500;
     line-height: 130%;
+    font-size: 1.6rem;
+    letter-spacing: -0.02em;
   }
 
   &__content {
     max-width: 70rem;
+    font-size: 1.6rem;
+    line-height: 110%;
+    letter-spacing: -0.02em;
   }
 
   &__logo {
@@ -121,5 +132,15 @@
     align-items: center;
     justify-content: center;
     border-radius: 3rem;
+  }
+
+  &__link {
+    font-weight: 200;
+    line-height: 110%;
+    letter-spacing: -0.02em;
+    text-decoration-skip-ink: none;
+    text-decoration-line: underline;
+    text-decoration-thickness: from-font;
+    color: #000;
   }
 }
