--- a/src/views/cases-kig.html
+++ b/src/views/cases-kig.html
@@ -7,18 +7,22 @@
     ></noscript>
     @@include("../blocks/modules/header/header-cases.html")
     <main class="page no-footer-margin">
-      <section class="navigate-section start-section" id="start">
+      <section class="navigate-section start-section start-section--case" id="start">
         <div class="container">
           <div class="start-section__wrapper">
             <div class="start-section__top">
               <div class="start-section__top-left">
                 <div class="start-section__title">
-                  <h1>Разработка корпоративного сайта-каталога для компании «К-Индастриал Групп»</h1>
+                  <h1>
+                    Разработка корпоративного сайта-каталога <br class="netbook-hidden" />
+                    для компании «К&#8209;Индастриал&nbsp;Групп»
+                  </h1>
                 </div>
 
                 <div class="start-section__title-subtext netbook-hidden">
-                  Компания специализируется на прямых поставках и продаже высококачественного промышленного
-                  электрооборудования
+                  Компания специализируется на прямых поставках и продаже высококачественного
+                  <br class="mobile-hidden" />
+                  промышленного электрооборудования
                 </div>
               </div>
               <div class="start-section__top-right">
@@ -213,8 +217,8 @@
             <div class="start-section__bottom">
               <div class="start-section__bottom-right">
                 <div class="start-section__title-subtext">
-                  Новый сайт позволил компании привлечь больше клиентов и увеличить объемы продаж. Сайт не только
-                  улучшил имидж компании, но и стал эффективным бизнес-инструментом
+                  Новый сайт позволил компании привлечь больше клиентов <br class="mobile-hidden" />и увеличить объемы
+                  продаж. Сайт не только улучшил имидж компании, но и стал эффективным бизнес-инструментом
                 </div>
               </div>
             </div>
@@ -266,7 +270,8 @@
                     </div>
                     <div class="case-tasks-section__grid-item-content">
                       <div class="case-tasks-section__grid-item-title">
-                        Создание современного и интуитивно понятного дизайна:
+                        Создание современного <br class="mobile-hidden" />
+                        и интуитивно понятного дизайна:
                       </div>
                       <div class="case-tasks-section__grid-item-description">
                         Дизайн сайта должен был быть привлекательным и соответствовать имиджу компании.
@@ -444,8 +449,8 @@
                     <div class="stages-list__description sub20">
                       После проработки всех требований были созданы детальные черно-белые прототипы страниц сайта,
                       определяющие структуру каждой страницы и ее функциональные блоки. Особое внимание уделяется
-                      удобству использования сайта для пользователя
-                      <a href="#" target="_blank" class="link">Пример прототипа</a>
+                      удобству использования сайта для пользователя.
+                      <a href="#" target="_blank" class="link">Посмотреть пример прототипа</a>
                     </div>
                   </div>
                 </div>
