--- a/src/views/cases-linimax.html
+++ b/src/views/cases-linimax.html
@@ -7,18 +7,18 @@
     ></noscript>
     @@include("../blocks/modules/header/header-cases.html")
     <main class="page no-footer-margin">
-      <section class="navigate-section start-section" id="start">
+      <section class="navigate-section start-section start-section--case" id="start">
         <div class="container">
           <div class="start-section__wrapper">
             <div class="start-section__top">
               <div class="start-section__top-left">
                 <div class="start-section__title">
-                  <h1>Разработка имиджевого корпоративного сайта для компании LINNIMAX</h1>
+                  <h1>Разработка имиджевого корпоративного сайта <br class="netbook-hidden" />для компании LINNIMAX</h1>
                 </div>
 
                 <div class="start-section__title-subtext netbook-hidden">
-                  Компания специализируется на разработке и прямых поставках профессиональных высококачественных
-                  отделочных материалов и решений
+                  Компания специализируется на разработке и прямых поставках
+                  <br class="netbook-hidden" />профессиональных высококачественных отделочных материалов и решений
                 </div>
               </div>
               <div class="start-section__top-right">
@@ -360,7 +360,7 @@
                   </div>
                   <div class="solution-card">
                     <div class="solution-card__number">02</div>
-                    <div class="solution-card__content sub20">
+                    <div class="solution-card__content sub20" style="max-width: 54rem">
                       <div class="solution-card__content-inner">
                         <p>
                           На сайте было реализовано три удобных каталога: (Продукция, Объекты и Документация) с
@@ -369,7 +369,7 @@
                         </p>
                       </div>
                     </div>
-                    <div class="solution-card__img-wr">
+                    <div class="solution-card__img-wr" style="margin-top: -7rem">
                       <img src="./img/cases/linimax/linimax-case-img-3.png" alt="" />
                     </div>
                   </div>
@@ -384,7 +384,7 @@
                         </p>
                       </div>
                     </div>
-                    <div class="solution-card__img-wr" style="margin-top: -10rem">
+                    <div class="solution-card__img-wr" style="margin-top: -13rem">
                       <img src="./img/cases/linimax/linimax-case-img-4.png" alt="" />
                     </div>
                   </div>
@@ -456,8 +456,8 @@
                     <div class="stages-list__description sub20">
                       После проработки всех требований были созданы детальные черно-белые прототипы страниц сайта,
                       определяющие структуру каждой страницы и ее функциональные блоки. Особое внимание уделяется
-                      удобству использования сайта для пользователя Пример прототипа
-                      <a href="#" target="_blank" class="link">Пример прототипа</a>
+                      удобству использования сайта для пользователя.
+                      <a href="#" target="_blank" class="link">Посмотреть пример прототипа</a>
                     </div>
                   </div>
                 </div>
