--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -17,4 +17,5 @@
 @import "../blocks/modules/why-section/why-section";
 @import "../blocks/modules/team-section/team-section";
 @import "../blocks/modules/reviews-section/reviews-section";
+@import "../blocks/modules/cases-section/cases-section";
 @import "../blocks/modules/popups/popups";
