--- a/src/views/cases-kig.html
+++ b/src/views/cases-kig.html
@@ -509,7 +509,7 @@
                       После полной проверки сайт был перенесен на основной домен, а для ответственного за сайт
                       специалиста со стороны заказчика было проведено видео-обучение по работе с сайтом и созданы
                       pdf-инструкции по наполнению сайта контентом.
-                      <a href="#" target="_blank" class="link">Пример инструкции</a>
+                      <a href="#" target="_blank" class="link">Посмотреть пример инструкции</a>
                     </div>
                   </div>
                 </div>
@@ -533,19 +533,19 @@
               </div>
               <div class="review-card__content">
                 <p>
-                  Хочу выразить искреннюю благодарность за вашу работу над нашим сайтом. Ваш профессионализм и
-                  креативный подход значительно улучшили наш онлайн-ресурс. Вы не только учли все наши пожелания, но и
-                  предложили множество ценных идей, которые сделали сайт более удобным и привлекательным для
-                  пользователей.
+                  Хочу сказать спасибо команде GapDev за проделанную работу над нашим сайтом. Вы очень профессионально и
+                  креативно подошли к работе, благодаря чему получился отличный проект. Во время работы вы учли все наши
+                  пожелания и предложили свои отличные идеи, что позволило сделать сайт не просто красивым, а очень
+                  функциональным и удобным для пользователей.
                 </p>
                 <br />
                 <p>
-                  Ваше внимание к деталям и способность решать возникающие проблемы в кратчайшие сроки впечатляют. Мы
-                  ценим вашу готовность к сотрудничеству и открытость к обратной связи. Благодаря вашему труду наш сайт
-                  стал не только красивым, но и функциональным инструментом для бизнеса.
+                  Вы очень внимательно подходите к деталям, умеете быстро решать любые проблемы. Мы очень ценим наше
+                  сотрудничество и нацелены на дальнейшую активную работу по развитию проекта! Рекомендую вас, как
+                  надежного партнера в сфере IT технологий.
                 </p>
                 <br />
-                <a href="#" target="_blank" class="review-card__link">Посмотреть отзыв</a>
+                <a href="/docs/KIG001.pdf" target="_blank" class="review-card__link">Посмотреть отзыв</a>
               </div>
             </div>
           </div>
