--- a/src/views/cases-linimax.html
+++ b/src/views/cases-linimax.html
@@ -515,7 +515,7 @@
                       После полной проверки сайт был перенесен на основной домен, а для ответственного за сайт
                       специалиста со стороны заказчика было проведено видео-обучение по работе с сайтом и созданы
                       pdf-инструкции по наполнению сайта контентом.
-                      <a href="#" target="_blank" class="link">Пример инструкции</a>
+                      <a href="#" target="_blank" class="link">Посмотреть пример инструкции</a>
                     </div>
                   </div>
                 </div>
@@ -550,7 +550,7 @@
                   была возможность вносить небольшие изменения на каждом этапе, что шло на пользу общему результату.
                 </p>
                 <br />
-                <a href="#" target="_blank" class="review-card__link">Посмотреть отзыв</a>
+                <a href="/docs/LINNIMAX.pdf" target="_blank" class="review-card__link">Посмотреть отзыв</a>
               </div>
             </div>
           </div>
